Fix omniauth bug

--- a/app/assets/stylesheets/developers.css.scss
+++ b/app/assets/stylesheets/developers.css.scss
@@ -12,7 +12,7 @@
   text-shadow: 0px 1px 0 #a2a2a2;
 }
   .star-ratings-css-top {
-    color: #e7711b;
+    color: #ff4448;
     padding: 0;
     text-shadow: 0px 1px 0 #ab5414;
     position: absolute;
@@ -26,6 +26,7 @@
 #review-box {
   margin: 10px;
   border: solid;
+  border-width: 2px;
   width: 40%;
 }
 
