--- a/app/views/businesses/new.html.erb
+++ b/app/views/businesses/new.html.erb
@@ -1,4 +1,6 @@
 <section id='form'>
+  <h1>Register Your Business</h1>
+
   <%= form_for @business, html: { multipart: true } do |f| %>
   <ul>
     <li>
