--- a/app/views/partials/_matching.html.erb
+++ b/app/views/partials/_matching.html.erb
@@ -7,7 +7,7 @@
   <% end %>
 <% end %>
 
-<h4>Developers in charge:</h4>
+<h4>Assigned Developer</h4>
 <ul>
   <% user.received_matches.each do |match| %>
     <% if match.accepted == "true" %>
