--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -11,7 +11,7 @@
       <%= f.select :communication_rating, 1..5 %>
     </li>
     <li>
-      <%= f.label :quality %>
+      <%= f.label :work_quality %>
       <%= f.select :quality_rating, 1..5 %>
     </li>
     <li>
