--- a/app/views/owners/show.html.erb
+++ b/app/views/owners/show.html.erb
@@ -1,33 +1,35 @@
-<h1><%= @owner.first_name %></h1>
+<section>
 
-<h4>About Me <%= @owner.description %></h4>
-<% if has_avatar? @owner %>
-  <%= link_to image_tag(@owner.avatar.url(:thumb)), @owner.avatar.url %>
-<% elsif @auth &&  @owner.id == current_user.id %>
-      <%= image_tag(@auth['info']['image'], class: 'profile-pic') %>
-<% else %>
-  <%= image_tag "blank-profile-pic.png", class: 'profile-pic' %>
-<% end %>
-<hr>
-<div class= "show-biz" >
-<h3> <%= @owner.first_name %>'s business: </h3>
-<%= link_to @owner.business.name, business_path(@owner.business) %>
-<p><%= @owner.business.description %></p>
-</div>
+  <h1><%= @owner.first_name %> <%= @owner.last_name %></h1>
+  <h3><%= @owner.location %></h3>
+  <h4>About Me <%= @owner.description %></h4>
+
+	<% if has_avatar? @owner %>
+	  <%= link_to image_tag(@owner.avatar.url(:thumb)), @owner.avatar.url %>
+	<% elsif @auth &&  @owner.id == current_user.id %>
+	      <%= image_tag(@auth['info']['image'], class: 'profile-pic') %>
+	<% else %>
+	  <%= image_tag "blank-profile-pic.png", class: 'profile-pic' %>
+	<% end %>
+	<hr>
+
+	<% if @owner.business && @owner.editable_by?(current_user) %>
+	<div class= "show-biz" >
+	<h3> <%= @owner.first_name %>'s business: </h3>
+	<%= link_to @owner.business.name, business_path(@owner.business) %>
+	<p><%= @owner.business.description %></p>
+	</div>
+	  <%= link_to 'Edit Profile', edit_owner_path(@owner) %>
+	  <%= link_to 'Edit Business', edit_business_path(@owner.business) %>
+	<% elsif @owner.editable_by?(current_user) %>
+	  <%= link_to 'Edit Profile', edit_owner_path(@owner) %>
+	  <%=link_to 'Create Business Page', new_business_path %>
+	<% end %>
 
 
-
-
-<% if @owner.business && @owner.editable_by?(current_user) %>
-  <%= link_to 'edit your business', edit_business_path(@owner.business) %>
-<% elsif @owner.editable_by?(current_user) %>
-  <%=link_to 'Create your Business Page', new_business_path %>
-<% end %>
-
-
-<% if @owner.id != current_user.id %>
-  <div class=”item”>
-    <%= @owner.first_name %> <%= link_to "Message me!", conversations_path(sender_id: current_user.id, recipient_id: @owner.id), method: "post"%>
-  </div>
-<% end %>
-
+	<% if @owner.id != current_user.id %>
+	  <div class=”item”>
+	    <%= @owner.first_name %> <%= link_to "Contact Me", conversations_path(sender_id: current_user.id, recipient_id: @owner.id), method: "post"%>
+	  </div>
+	<% end %>
+</section>
