Add carousel to index page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -6,6 +6,12 @@
  *= require businesses
  *= require developers
  *= require conversations
+[...]
+*= require slick
+[...]
+[...]
+*= require slick-theme
+[...]
  *= require_tree .
  *= require_self
  */
