--- a/app/views/partials/_review.html.erb
+++ b/app/views/partials/_review.html.erb
@@ -1,6 +1,15 @@
 <div id="review-box">
 
-  <p><%= review.comment %> | by: <%= review.reviewer.first_name%> - <%=review.reviewer.type%></p>
+
+  <% if has_avatar? review.reviewer %>
+    <%= link_to image_tag(review.reviewer.avatar.url(:thumb)), review.reviewer.avatar.url%>
+  <% elsif @auth &&  review.reviewer.id == current_user.id %>
+        <%= image_tag(@auth['info']['image'], class: 'profile-pic') %>
+  <% else %>
+    <%= image_tag "blank-profile-pic.png", class: 'profile-pic' %>
+  <% end %>
+  <h4><%= review.reviewer.first_name %></h4>
+  <p><%= review.comment %></p>
 
   <h5>Communication
     <div class="star-ratings-css">
