--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -6,10 +6,9 @@
 
 
 <div>
-  <legend>Search Our Businesses</legend>
+  <legend>Search Our Businesses by Name or Category</legend>
     <%= search_form_for @search do |f| %>
-      <%= f.label :name_cont %>
-      <%= f.text_field :name_cont %>
+      <%= f.text_field :name_or_categories_name_cont %>
 
       <%= f.submit "Search" %>
     <% end %>
