--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -18,18 +18,17 @@
 <section class='all-businesses'>
   <% @businesses.each do |business| %>
     <section class='business'>
+      <div>
+        <% if  business.photos.first != nil %>
+
+        <%=image_tag business.photos.first.image.url(:square), class: "business-images" %>
+        <% end %>
+      </div>
       <div class='business-name'>
         <h3><%= link_to business.name, business_path(business), class: "animsition-link" %></h3>
       </div>
       <div class='business-info'>
         <h4><%=business.location%></h4>
-      </div>
-      <div class='business-images'>
-        <% business.photos.each do |photo| %>
-         <div>
-           <%=image_tag photo.image.url(:square) %>
-         </div>
-        <% end %>
       </div>
     </section>
   <% end %>
