--- a/app/views/businesses/edit.html.erb
+++ b/app/views/businesses/edit.html.erb
@@ -1,4 +1,5 @@
 <section id='form'>
+  <h1> Update Your Business </h1>
   <%= form_for @business, html: { multipart: true } do |f| %>
     <ul>
       <li>
@@ -15,7 +16,7 @@
       </li>
       <li>
         <%= f.label 'Catgories'%>
-        <%= f.collection_check_boxes :catgory_ids, Category.all, :id, :name do |b| %>
+        <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |b| %>
           <ul>
             <li class='collection-check-box'>
                <%= b.check_box %>
