Contact info migration and shows and forms

--- a/app/views/developers/show.html.erb
+++ b/app/views/developers/show.html.erb
@@ -18,6 +18,18 @@
   <% end %>
   </ul>
 
+  <h3>Contact Me</h3>
+  <% if @developer.slack_id %>
+  <h4>Slack @<%= @developer.slack_id %></h4>
+  <% end %>
+  <h4>E-mail <%= @developer.uid %></h4>
+  <% if @developer.skype_id %>
+  <h4>Skype @<%= @developer.skype_id %></h4>
+  <% end %>
+  <% if @developer.phone_number %>
+  <h4>Phone <%= @developer.phone_number %></h4>
+  <% end %>
+
   <% if current_user && @developer.editable_by?(current_user) %>
     <%= link_to 'Edit Profile', edit_developer_path(@developer) %>
   <% end %>
