--- a/app/views/developers/edit.html.erb
+++ b/app/views/developers/edit.html.erb
@@ -26,6 +26,18 @@
         <%= f.label :describe_yourself %>
         <%= f.text_area :description %>
       </li>
+      <li>
+        <%= f.label 'Skype ID (optional)' %>
+        <%= f.text_field :skype_id %>
+      </li>
+      <li>
+        <%= f.label 'Slack ID (optional)' %>
+        <%= f.text_field :slack_id %>
+      </li>
+      <li>
+        <%= f.label 'Phone Number (optional)' %>
+        <%= f.text_field :phone_number %>
+      </li>
        <li>
         <%= f.label 'Skills'%>
         <%= f.collection_check_boxes :skill_ids, Skill.all, :id, :name do |b| %>
