--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,5 +1,5 @@
 <section>
-  
+
   <h3>Owner: <%= link_to @business.owner.first_name, owner_path(@business.owner) %></h3>
   <div class='info'>
     <h3>Company Name: <%=@business.name%></h3>
@@ -20,7 +20,7 @@
      </div>
     <% end %>
   </div>
-  
+
   <div>
     <% if @business.editable_by? current_user %>
       <%= link_to 'edit', edit_business_path(@business)%>
@@ -32,12 +32,12 @@
   <%= render partial: 'partials/matching', locals: { user: @owner }%>
 
   <div>
-    <h4>Status: @business.status</h4>
+    <h4>Status: <%=@business.status %></h4>
   </div>
 
   <% @business.status_updates.each do |update| %>
     <%= render partial: 'partials/status_update', locals: { business: @business }%>
-  <% end %> 
+  <% end %>
 
 
   <div style='width: 800px;'>
