--- a/app/views/partials/_matching.html.erb
+++ b/app/views/partials/_matching.html.erb
@@ -7,7 +7,7 @@
   <% end %>
 <% end %>
 
-<h4>Assigned Developer</h4>
+<h4>Assigned Developer for this project:</h4>
 <ul>
   <% user.received_matches.each do |match| %>
     <% if match.accepted == "true" %>
@@ -28,7 +28,7 @@
 </ul>
 
 <% if current_user == user %>
-  <h4> Requests</h4>
+  <h4> Your Pending Requests:</h4>
   <ul>
     <% user.received_matches.each do |match| %>
     <% if match.accepted == "f" %>
