--- a/app/views/partials/_matching.html.erb
+++ b/app/views/partials/_matching.html.erb
@@ -6,8 +6,12 @@
     <%= link_to "Send Request", matches_path(id: user), :method => :post %>
   <% end %>
 <% end %>
-
+<% if user.type == "owner" %>
 <h4>Assigned Developer for this project:</h4>
+<% else %>
+<h4>Working with:</h4>
+<% end %>
+
 <ul>
   <% user.received_matches.each do |match| %>
     <% if match.accepted == "true" %>
@@ -17,7 +21,6 @@
     <% end %>
   <% end %>
 </ul>
-
 <ul>
   <% user.sent_matches.each do |match| %>
     <li>
@@ -34,7 +37,7 @@
     <% if match.accepted == "f" %>
     <li>
       <%= match.user.first_name %>
-      <%= link_to "Accept",  request_accept_match_path(:id => match), :method => "put" %>
+      <%= link_to "Accept",  request_accept_match_path(:id => match) %>
       <%= link_to "Decline",  request_reject_match_path(:id => match), :method => :delete %>
     </li>
     <% end %>
