--- a/app/assets/stylesheets/flexbox.css
+++ b/app/assets/stylesheets/flexbox.css
@@ -55,3 +55,24 @@
   margin: 2em;
   padding: 2em;
 }
+
+.info {
+    display: flex;
+  flex-wrap: wrap;
+   background-color: rgba(51, 46, 46, 0.1);
+   margin-bottom: 5em;
+   padding: 2em;
+   border-radius: 10%;
+}
+
+h3 .titles {
+  font-size: 3em;
+  font-weight: bold;
+}
+.business-images {
+  background-color: #fff;
+}
+
+.biz-pic {
+  border-radius: 10%;
+}
