--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,7 @@
   <footer id = "footer">
     <div id = "footer-bar">
        <%= link_to "About", about_path %>
+       <%= link_to "Help", help_path %>
     </div>
   </footer>
 </body>
