--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -3,7 +3,7 @@
   <h3 class= "titles">Owner: <%= link_to @business.owner.first_name, owner_path(@business.owner) %></h3>
   <div class='info'>
     <h3>Company Name: <%=@business.name%></h3>
-    <h4>Location: <%=@business.location%></h4>
+    <h4 class= >Location: <%=@business.location%></h4>
     <h4>Description</h4>
     <p><%=@business.description%></p>
     <ul>Categories
