--- a/app/assets/stylesheets/flexbox.css.scss
+++ b/app/assets/stylesheets/flexbox.css.scss
@@ -59,9 +59,15 @@
    border-radius: 10%;
 }
 
-h3 .titles {
-  font-size: 3em;
+h3  {
+  font-size: 30px;
   font-weight: bold;
+  font-family: serif;
+}
+
+h4 {
+  font-size: 25px;
+  font-family: serif;
 }
 .business-images {
   background-color: #fff;
