Update styles for navigation, forms, and footers

--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -15,7 +15,8 @@
 </div>
 
 
-<section class='all-businesses'>
+
+<section class='all-businesses clear-fix'>
   <% @businesses.each do |business| %>
     <section class='business'>
       <div>
