--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -39,9 +39,10 @@
     <%= render partial: 'partials/status_update', locals: { business: @business }%>
   <% end %>
 
-
-  <div style='width: 800px;'>
-    <div id="map" style='width: 800px; height: 400px;'></div>
+  <div id='business-location'>
+    <div style='width: 800px;'>
+      <div id="map" style='width: 800px; height: 400px;'></div>
+    </div>
   </div>
 
   <script type="text/javascript">
