--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -9,12 +9,32 @@ ul {
     padding: 0;
 }
 
-#navbar {
-  margin-top: -4.6em;
-  float: right;
-  margin-right: 1px;
-  font-weight: bold;
+#header-title {
+  text-align: center;
 }
+
+#navbar {
+  text-align: center;
+  padding: 10px 0;
+  margin: 20px 0 0;
+}
+
+#navbar ul {
+  list-style: none;
+  margin: 0 10px;
+  padding: 0;
+}
+
+#navbar li {
+  display: inline-block;
+}
+
+#navbar a {
+  font-weight: 700;
+  font-size: 1.05em;
+  padding: 15px 10px;
+}
+
 
 h4 {
   font-weight: bolder;
@@ -29,6 +49,7 @@ h4 {
 #footer-bar a {
   display: inline-block;
   margin-top: 10px;
+  margin-right: 10px;
 }
 
 @media (min-width: 769px) {
@@ -37,10 +58,29 @@ h4 {
     min-height: calc(100vh - 96px);
   }
 
+
   .container {
     width: 85%;
+    max-width: 1150px;
     margin: 0 auto;
   }
+
+  #navbar {
+    float: right;
+  }
+
+  #header-title,
+  #navbar li {
+    float: left;
+  }
+
+  .clearfix::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+
 }
 
 .button,
@@ -150,15 +190,13 @@ select {
 input[type="submit"] {
   background: #ff4448;
   color: #fff;
+  width: 330px;
 }
+
 
 .developer-showcase {
   padding: 10px;
   background: #fff;
   border-radius: 5px;
 }
-
-.developer-item {
-}
-
 
