--- a/app/assets/stylesheets/flexbox.css.scss
+++ b/app/assets/stylesheets/flexbox.css.scss
@@ -56,23 +56,47 @@
    background-color: rgba(51, 46, 46, 0.1);
    margin-bottom: 5em;
    padding: 2em;
-   border-radius: 10%;
+   /*border-radius: 10%;*/
 }
 
 h3  {
   font-size: 30px;
   font-weight: bold;
   font-family: serif;
+  display: inline-block;
 }
 
 h4 {
   font-size: 25px;
   font-family: serif;
 }
+
+h5 {
+  font-size: 18px;
+  font-family: sans-serif;
+}
+
 .business-images {
   background-color: #fff;
+  opacity: 0.8;
 }
 
 .biz-pic {
   border-radius: 10%;
+  display: flex;
+
 }
+
+.captions {
+  bottom: 50%;
+  position: absolute;
+  font-size: 80px;
+  color: white;
+  font-family: serif;
+  text-align: center;
+}
+
+.slick-arrow {
+  background-color: gray;
+}
+
