--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -40,6 +40,11 @@ h4 {
   font-weight: bolder;
 }
 
+p {
+  font-weight: bolder;
+  font-size: 20px;
+}
+
 #footer {
   text-align: center;
   background: #606c76;
