Update search bar layout and change name to codetribute

--- a/app/views/businesses/new.html.erb
+++ b/app/views/businesses/new.html.erb
@@ -30,7 +30,7 @@
       <%= f.label :photo %>
       <%= file_field_tag "images[]", type: :file, multiple: true %>
     </li>
-      <%= f.hidden_field :provider, value: "buildmybusiness" %>
+      <%= f.hidden_field :provider, value: "codetribute" %>
     <li>
       <%= f.submit %>
     </li>
