--- a/app/views/developers/new.html.erb
+++ b/app/views/developers/new.html.erb
@@ -38,7 +38,7 @@
         <%= f.label :avatar %>
         <%= f.file_field :avatar %>
       </li>
-      <%= f.hidden_field :provider, value: "buildmybusiness" %>
+      <%= f.hidden_field :provider, value: "codetribute" %>
       <li>
       <%= f.submit %>
       </li>
