--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <meta name="author" content="">
   <meta content='<%= user_signed_in? ? current_user.id : "" %>' name='user-id'/>
 
-  <title>BuildMyBusiness</title>
+  <title>codetribute</title>
 
    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
   <%= csrf_meta_tags %>
@@ -25,7 +25,7 @@
   <div id='wrap' class='animsition'>
     <header id="header">
       <div class='container clearfix'>
-        <h1 id="header-title"><%= link_to 'BuildMyBusiness', root_path%></a></h1>
+        <h1 id="header-title"><%= link_to 'codetribute', root_path%></a></h1>
         <nav id ="navbar">
             <ul>
             <% if current_user %>
