--- a/app/views/owners/new.html.erb
+++ b/app/views/owners/new.html.erb
@@ -34,7 +34,7 @@
       <%= f.label :avatar %>
       <%= f.file_field :avatar %>
     </li>
-      <%= f.hidden_field :provider, value: "buildmybusiness" %>
+      <%= f.hidden_field :provider, value: "codetribute" %>
     <li>
     <%= f.submit 'Sign Up', class: 'button'  %>
     </li>
