--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,7 +1,5 @@
-<div class="your-class">
-  <div><img class="covers" src="http://www.fbcoverdesign.com/wp-content/uploads/2014/08/best_destination_in_the_world-fbcoverdesign.jpg" /></div>
-  <div><img class="covers" src="http://i160.photobucket.com/albums/t162/hotlyts24/fb-covers/sept13/classy/tumblr_ma3g9riU8R1r1z3kyo1_500_large.jpg" /></div>
-  <div><img class="covers" src="http://www.getfbcover.com/covers-images/download/food_Dessert_breakfast.jpg" /></div>
+<div id="home-video">
+  <%= video_tag("home.mp4", :autoplay => true, :loop => true, :id => "home-video") %>
 </div>
 
 
