--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 <body>
   <div id='wrap' class='animsition'>
     <header id="header">
-      <div class='container clearfix'>
+      <div class='container'>
         <h1 id="header-title"><%= link_to 'codetribute', root_path%></a></h1>
         <nav id ="navbar">
             <ul>
@@ -34,7 +34,7 @@
               <li><%= link_to 'Inbox', conversations_path %></li>
               <li><%= link_to 'Logout', session_path, method: :delete %></li>
             <% else %>
-              <li>Sign up as a <%= link_to 'Business', new_owner_path%></li>
+              <li><%= link_to 'Business', new_owner_path%></li>
               <li><%= link_to 'Developer', new_developer_path%></li>
               <li><%= link_to 'Login', new_session_path%></li>
             <% end %>
