--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -34,7 +34,6 @@ ul {
   font-weight: 700;
   font-size: 1.05em;
   padding: 15px 10px;
->>>>>>> Update navigation with flex box
 }
 
 h4 {
@@ -172,13 +171,17 @@ input[type="submit"] {
 
 .business_search {
   display: flex;
-  justify-content: space-around;
 }
 
 
 .business_search input[type="text"] {
   width: 70%;
-  margin-right: 1.5%;
+  margin-left: 5%;
+}
+
+.business_search input[type="submit"] {
+  width: 20%;
+  margin-right: 5%;
 }
 
 #home-video{
