--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,6 +1,6 @@
 
 <div id="home-video">
-  <%= video_tag("home.mp4", :autoplay => true, :loop => true, :id => "home-video") %>
+  <%= video_tag("home.mp4", :autoplay => true, :loop => true, :muted => true, :id => "home-video") %>
 </div>
 
 <div>
