Add progress page

--- a/app/assets/stylesheets/flexbox.css.scss
+++ b/app/assets/stylesheets/flexbox.css.scss
@@ -97,3 +97,40 @@ h5 {
   background-color: gray;
 }
 
+.title {
+  position: absolute;
+   top: 100px;
+   left: 10%;
+   width: 100%;
+   font-size: 5em;
+   color: white;
+    font-family: -webkit-body;
+}
+
+.progress-box {
+ position: relative;
+   width: 100%;
+   }
+
+.stairs {
+width: 100%;
+
+}
+
+.office {
+  width: 90%;
+}
+
+.intro {
+  font-weight: bold;
+  margin-bottom: 3em;
+}
+
+.intro-title {
+  font-weight: bolder;
+  font-size: 3em;
+}
+
+.report {
+  margin: 2em;
+}
