--- a/app/assets/stylesheets/developers.css.scss
+++ b/app/assets/stylesheets/developers.css.scss
@@ -32,6 +32,13 @@ h5 {
   margin: 5px;
 }
 
+.info, .business-images, .business-location {
+  text-align: center;
+  margin: 0 5em;
+  padding: 0;
+  background-color: #f9f9f9;
+}
+
 p {
   margin: 5px;
 }
