--- a/app/views/developers/index.html.erb
+++ b/app/views/developers/index.html.erb
@@ -1,10 +1,3 @@
-<div class="search-bar">
-  <%= form_tag developers_path, method: :get do %>
-    <%= text_field_tag :search, nil, placeholder: "Search by Skill", class: 'search-field'%>
-    <%= submit_tag "Go", class: "button" %>
-  <% end %>
-</div>
-
 <div class= "developer-showcase">
 <% @developers.each do |developer| %>
 <div class= "developer-item">
@@ -18,8 +11,7 @@
   <br>
   <% if current_user %>
     <% if developer.id != current_user.id %>
-  <%= link_to "Send Message", conversations_path(sender_id: current_user.id, recipient_id: developer.id), method: "post", class: "btn btn-success btn-xs start-conversation",
-                    "data-sid" => current_user.id, "data-rip" => developer.id %>
+  <%= link_to "Send Message", conversations_path(sender_id: current_user.id, recipient_id: developer.id), method: "post", class: "btn btn-success btn-xs start-conversation", "data-sid" => current_user.id, "data-rip" => developer.id %>
     <% end %>
   <% end %>
 </div>
