--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -40,16 +40,25 @@ h4 {
   font-weight: bolder;
 }
 
+#footer bar li {
+  margin-right: 10px;
+}
+
 #footer {
-  text-align: center;
   background: #606c76;
   padding: 2em 0;
 }
 
-#footer-bar a {
-  display: inline-block;
-  margin-top: 10px;
+#footer-bar ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
+
+#footer-bar li {
+  margin: 0 10px;
+}
+
 
 
 
@@ -191,3 +200,32 @@ input[type="submit"] {
   margin-right: 1.5%;
 }
 
+.is-sticky #header {
+  background: #fff;
+  opacity: 1.0;
+  z-index: 1;
+}
+
+.is-sticky #header-title {
+  margin-top: 0;
+  font-size: 1.75em;
+}
+
+.is-sticky #navbar {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.is-sticky #navbar li {
+  font-size: 0.85em;
+}
+
+.site {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.site-content {
+  flex: 1;
+}
