add cover to developer index page

--- a/app/views/developers/index.html.erb
+++ b/app/views/developers/index.html.erb
@@ -1,3 +1,18 @@
+
+<div class="search-bar">
+  <%= form_tag developers_path, method: :get do %>
+    <%= text_field_tag :search, nil, placeholder: "Search by Skill", class: 'search-field'%>
+    <%= submit_tag "Go", class: "button" %>
+  <% end %>
+</div>
+
+<div class= "dev-topbox">
+  <%= image_tag("coffee-apple.jpg", :alt => "rss feed", class: "ipad") %>
+  <h1 class="dev-title">Discover Create Contribute</h1>
+  <h1 class="dev-title2">Get Creative, Maximize your talent</h1>
+</div>
+<hr>
+
 <div class= "developer-showcase">
 <% @developers.each do |developer| %>
 <div class= "developer-item">
