--- a/app/views/owners/show.html.erb
+++ b/app/views/owners/show.html.erb
@@ -13,35 +13,35 @@
     <%= image_tag "blank-profile-pic.png", class: 'profile-pic' %>
   <% end %>
   <hr>
-
-  <% if @owner.business && @owner.editable_by?(current_user) %>
-  <div class= "show-biz" >
-  <h3> <%= @owner.first_name %>'s business: </h3>
-  <%= link_to @owner.business.name, business_path(@owner.business) %>
-  <p><%= @owner.business.description %></p>
-  </div>
-
   <h3>Contact Me</h3>
   <% if @owner.slack_id %>
-  <h4>Slack @<%= @owner.slack_id %></h4>
+    <h4>Slack @<%= @owner.slack_id %></h4>
   <% end %>
-  <h4>E-mail <%= @owner.uid %></h4>
+    <h4>E-mail <%= @owner.uid %></h4>
   <% if @owner.skype_id %>
-  <h4>Skype @<%= @owner.skype_id %></h4>
+    <h4>Skype @<%= @owner.skype_id %></h4>
   <% end %>
   <% if @owner.phone_number %>
-  <h4>Phone <%= @owner.phone_number %></h4>
+    <h4>Phone <%= @owner.phone_number %></h4>
   <% end %>
+
+  <% if current_user && (@owner.business && @owner.editable_by?(current_user)) %>
+    <div class= "show-biz" >
+    <h3> <%= @owner.first_name %>'s business: </h3>
+    <%= link_to @owner.business.name, business_path(@owner.business) %>
+    <p><%= @owner.business.description %></p>
+    </div>
+
 
     <%= link_to 'Edit Profile', edit_owner_path(@owner) %>
     <%= link_to 'Edit Business', edit_business_path(@owner.business) %>
-  <% elsif @owner.editable_by?(current_user) %>
+  <% elsif current_user && @owner.editable_by?(current_user) %>
     <%= link_to 'Edit Profile', edit_owner_path(@owner) %>
     <%=link_to 'Create Business Page', new_business_path %>
   <% end %>
 
 
-  <% if @owner.id != current_user.id %>
+  <% if current_user != @owner && current_user != nil %>
     <div class=”item”>
       <%= @owner.first_name %> <%= link_to "Contact Me", conversations_path(sender_id: current_user.id, recipient_id: @owner.id), method: "post"%>
     </div>
