--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,16 +1,17 @@
+<div class = 'page'>
 <h1>Frequently Asked Questions</h1>
 
 <h3>How can I update my account information?</h3>
 <p>You may update your developer or business owner account information at any time. Simply select the 'Edit Your Profile' link your profile page to be redirected to the form. </p>
 
-<h3>How does Build my Business work?</h3>
-<p> Build my Business relies on generous and talented <%= link_to 'developers', developers_path %> to create beautiful websites for small and growing businesses around the globe. We help proprietors meet and work with web developers to expand their business and internet presence, while giving developers the opportunity to gain more exposure and experience in their field. Visit our <%= link_to 'About', about_path %> section for more details.</p>
+<h3>How does Codetribute work?</h3>
+<p> Codetribute relies on generous and talented <%= link_to 'developers', developers_path %> to create beautiful websites for small and growing businesses around the globe. We help proprietors meet and work with web developers to expand their business and internet presence, while giving developers the opportunity to gain more exposure and experience in their field. Visit our <%= link_to 'About', about_path %> section for more details.</p>
 
 <h3>How can I get involved?</h3>
-<p> If you represent a small business looking to expand, click <%= link_to 'here', new_owner_path %> to register. If you are a developer seeking to join the Build my Business community, click <%= link_to 'here', new_developer_path %>. </p>
+<p> If you represent a small business looking to expand, click <%= link_to 'here', new_owner_path %> to register. If you are a developer seeking to join the Codetribute community, click <%= link_to 'here', new_developer_path %>. </p>
 
 <h3>What are Status Updates?</h3>
-<p> We ask that all businesses that have had websites built by Build my Business developers submit a Status Update on the current state of their business once every two months for the first year following the launch of their website. Businesses are required to submit written updates, and are encouraged to track changes in revenue and submit photo updates. </p>
+<p> We ask that all businesses that have had websites built by Codetribute developers submit a Status Update on the current state of their business once every two months for the first year following the launch of their website. Businesses are required to submit written updates, and are encouraged to track changes in revenue and submit photo updates. </p>
 
 <h3>How do reviews work?</h3>
 <p> After a developer has completed a website for a business, the owner is encouraged to write the developer a review and rate his/her work based on Timeliness, Communication, and Quality (of the website). Developers who receive consistently low ratings will be contacted by our team. </p>
@@ -23,3 +24,4 @@
 
 <h3>What are my options to contact an business/developer?</h3>
 <p> We encourage both businesses and developers to share their Slack IDs, Skype IDs, and e-mails on their profile. Alternatively, users may message developers using our in-built instant messaging feature. </p>
+</div>
