--- a/app/assets/stylesheets/businesses.css.scss
+++ b/app/assets/stylesheets/businesses.css.scss
@@ -3,24 +3,25 @@
    border-color: #fff;
    border-style: solid;
    margin-top: 25px;
-   width: 100%;
+   width: 50%;
  }
  
  #map-canvas {
    height: 384px;
-   width: 100%;
+   width: 50%;
  }
 
  #business-location{
  	text-align: center;
- 	margin-bottom: 30px;
-    padding: 0;
+ 	padding-bottom: 30px;
+    margin: 0 auto;
+    width: 50%;
+    height: 30%
  }
 
  #map{
- 	width: 800px; 
- 	height: 400px;
+ 	width: 100%; 
+ 	height: 350px;
  	text-align: center;
- 	margin: 0 auto;
     padding: 0;
  }
