--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,9 +1,11 @@
-<h1>About Us</h1>
+<div class = 'page'>
+	<h1>About Us</h1>
 
-<p>Founded in New York City, Build my Business connects passionate individuals seeking to do better in what they love. Build my Business provides free services to help any business expand its online presence and brand by connecting generous web developers with determined proprietors. By minimizing the space between business owners and skilled developers, Build my Business is making more of the Internet beautiful and accessible -- for less.</p>
+<p>Founded in New York City, Codetribute connects passionate individuals seeking to do better in what they love.  Codetribute provides free services to help any business expand its online presence and brand by connecting generous web developers with determined proprietors. By minimizing the space between business owners and skilled developers, Codetribute is making more of the Internet beautiful and accessible -- for less.</p>
 
 <h1>Our Team</h1>
 
 <h3>Kerry</h3>
 <h3>Jenna</h3>
 <h3>Kristie</h3>
+</div>
