Update sticky nav, margins, spacing, and more

--- a/app/assets/stylesheets/flexbox.css.scss
+++ b/app/assets/stylesheets/flexbox.css.scss
@@ -40,7 +40,6 @@
   text-align: center;
   width: 80%;
   background-color: #f9f9f9;
-  padding-bottom: 2em;
 }
 
 .business-name, .business-info {
@@ -63,13 +62,14 @@
 }
 
 h3  {
-  font-size: 1.6em;
+  font-size: 1.3em;
   font-weight: bold;
   display: inline-block;
 }
 
 h4 {
   font-size: 1em;
+  margin-top: 0;
 }
 
 h5 {
