--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -33,6 +33,13 @@
   <% @business.status_updates.each do |update| %>
     <li><%= render partial: 'partials/status_update', locals: { business: @business }%></li>
   <% end %>
+
+  <div>
+    <% if @business.editable_by? current_user %>
+      <li><%= link_to 'Edit Business', edit_business_path(@business)%></li>
+      <li><%= link_to 'Submit an Update', new_business_status_update_path(@business) %></li>
+    <% end %>
+  </div>
   </ul>
   </div>
 
@@ -44,12 +51,7 @@
     <% end %>
   </div>
 
-  <div>
-    <% if @business.editable_by? current_user %>
-      <%= link_to 'edit', edit_business_path(@business)%>
-      <%= link_to 'submit an update', new_business_status_update_path(@business) %>
-    <% end %>
-  </div>
+  
 
   <div id='business-location'>
       <div id="map"></div>
